--- a/js/some.html
+++ b/js/some.html
@@ -13,13 +13,13 @@
                 var Tstatus = ['Open','Closed'];
                 var name= ['A','B','C','D'];
 
-                for(var i =0; i<50; i++){
+                for(var i =0; i<7; i++){
                     //sample set of 100 tickets
                     result.push({
                         "ticketID": Math.floor(Math.random()*(10000-1)),
                         "complaints/text": "Some Text",
-                        "madeByUser": name[i% Math.round(Math.random() * (name.length -1) +1)],
-                        "userLocation": areas[i% Math.round(Math.random() * (areas.length - 1))],
+                        "User": name[i% Math.round(Math.random() * (name.length -1) +1)],
+                        "Location": areas[i% Math.round(Math.random() * (areas.length - 1))],
                         "Date": new Date(new Date() *(Math.random() * (1-0.95)+0.95)),
                         "Status": Tstatus[i% Math.round(Math.random() * (1-0)+1)]
                     });
